Java 18+ compatibility using ByteBuddy, Rewrite injection of CTCGraphicsEnvironment (#16)
* Avoid attempt to make java.awt.GraphicsEnvironment non final, as this breaks in Java 18+.
Instead, use ByteBuddy to return CTCGraphicsEnvironment when sun.awt.PlatformGraphicsInfo.createGE() is called.
* Ignore jenv and log files
* Fix UnsupportedOperationException: inject CTCGraphicsEnvironment through sun.awt.PlatformGraphicsInfo.createGE()
* Replace removing a final modifier, which is not possible in JDK 18+, by ByteBuddy interceptors.
* Ensure that there is only one instance of CTCGraphicsEnvironment in use
* Keep constructor public, no need to change the API
* Make changing the Java version easier
* Update CacioExtension.java
* Update README.md